--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ google-auth-httplib2
 google-auth-oauthlib
 langchain
 langchain-community
-langchain_openai
+langchain-openai
 requests
 openai
 streamlit
